--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Zen Bubble Music</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
+    <link rel="shortcut icon" type="image/x-icon" href="ZenBubbleMusicFavicon.ico" />
     <script src="paper-full.js"></script>
     <script src="howler.min.js"></script>
     <script type="text/paperscript" canvas="myCanvas">
@@ -151,7 +152,7 @@
         var text = new PointText(view.center);
         text.justification = 'center';
         text.fillColor = 'white';
-        text.content = 'Press any key A to Z \nor click or drag the mouse.';
+        text.content = 'ZEN BUBBLE MUSIC \nPress any key A to Z \nor click or drag the mouse \nand turn up the speakers.';
         text.fontSize = 24;
 
         function onKeyDown(event) {
