--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Zen Bubble Music</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
-    <link rel="shortcut icon" type="image/x-icon" href="ZenBubbleMusicFavicon.ico" />
+    <link rel="shortcut icon" type="image/x-icon" href="https://richardkronick.github.io/ZenBubbleMusic/ZenBubbleMusicFavicon.ico" />
     <script src="paper-full.js"></script>
     <script src="howler.min.js"></script>
     <script type="text/paperscript" canvas="myCanvas">
