Minor textual changes

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
         var text = new PointText(view.center);
         text.justification = 'center';
         text.fillColor = 'white';
-        text.content = 'ZEN BUBBLE MUSIC \nPress any key A to Z \nor click or drag the mouse \nand turn up the speakers.';
+        text.content = 'ZEN BUBBLE MUSIC \nTurn up the speakers and \npress any key A to Z \nor click or drag the mouse.';
         text.fontSize = 24;
 
         function onKeyDown(event) {
